--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
     <!-- metas -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-
+    <meta name="description" content="Find your dreaming jobs through us." />
     <!-- title -->
     <title>GitJobs</title>
 
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -23,7 +22,10 @@
     <script defer src="/build/bundle.js"></script>
 
     <!-- icons -->
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"
+    ></script>
   </head>
 
   <body></body>
